syntax = "proto3";

package satd; // Adjust package name to your project

option go_package = "satd/v1";

message NetDat { bytes payload = 1; }

message RecConf {
  bool success = 1;
  int64 bytes_received = 2;
}

service ServerFeeder {
  rpc Feed(stream NetDat) returns (RecConf) {}
}
